# motionmatics

./: .gitignore  README.md  pyproject.toml  requirements.txt
motionmatics/: __init__.py  advice.py  ai_coach.py  align.py  angles.py  cli.py  compare.py  feedback.py  landmarks.py  normalize.py  pose.py  synthetic.py  visualize.py
scripts/: download_model.sh
tests/: test_advice.py  test_ai_coach.py  test_motionmatics.py
